implement code review comments