@@ -1,10 +1,15 @@
 package com.github.rajadilipkolli.dailynav;
 
+import java.sql.Connection;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.jdbc.core.ColumnMapRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
 
 public class TextToSqlGenerator {
@@ -14,7 +19,6 @@ public class TextToSqlGenerator {
 
   private final ChatClient chatClient;
   private final JdbcTemplate jdbcTemplate;
-  private final TrendAnomalyService trendAnomalyService;
 
   private static final String SYSTEM_PROMPT =
       """
@@ -34,11 +38,9 @@ public class TextToSqlGenerator {
       3. Use `nav_by_isin` when querying by ISIN, and `nav` when querying by scheme_code.
       """;
 
-  public TextToSqlGenerator(
-      ChatClient chatClient, JdbcTemplate jdbcTemplate, TrendAnomalyService trendAnomalyService) {
+  public TextToSqlGenerator(ChatClient chatClient, JdbcTemplate jdbcTemplate) {
     this.chatClient = chatClient.mutate().defaultSystem(SYSTEM_PROMPT).build();
     this.jdbcTemplate = jdbcTemplate;
-    this.trendAnomalyService = trendAnomalyService;
   }
 
   public String execute(String userQuery) {
@@ -46,7 +48,11 @@ public class TextToSqlGenerator {
 
     for (int attempt = 1; attempt <= MAX_RETRIES; attempt++) {
       try {
-        String sql = chatClient.prompt(currentPrompt).call().content().strip();
+        String rawSql = chatClient.prompt(currentPrompt).call().content();
+        if (rawSql == null) {
+          throw new IllegalStateException("LLM returned an empty response.");
+        }
+        String sql = rawSql.strip();
 
         // Remove markdown backticks if LLM mistakenly includes them
         if (sql.startsWith("```sql")) {
@@ -64,17 +70,61 @@ public class TextToSqlGenerator {
           return "I cannot answer this query using the available mutual fund database.";
         }
 
-        if (!sql.toUpperCase().startsWith("SELECT ")) {
-          throw new IllegalArgumentException("Only SELECT queries are permitted.");
+        // Strip trailing semicolon if present
+        if (sql.endsWith(";")) {
+          sql = sql.substring(0, sql.length() - 1).strip();
         }
 
-        // Dry-run EXPLAIN QUERY PLAN
-        jdbcTemplate.execute("EXPLAIN QUERY PLAN " + sql);
+        // Reject generated SQL containing semicolons outside string literals
+        String sqlWithoutStrings = sql.replaceAll("'[^']*'", "");
+        if (sqlWithoutStrings.contains(";")) {
+          throw new IllegalArgumentException("Multiple statements or semicolons are not allowed.");
+        }
 
-        // Execute query
-        List<Map<String, Object>> results = jdbcTemplate.queryForList(sql);
+        String upperSql = sql.toUpperCase();
+        if (!upperSql.startsWith("SELECT") && !upperSql.startsWith("WITH")) {
+          throw new IllegalArgumentException("Only SELECT or WITH queries are permitted.");
+        }
 
-        if (results.isEmpty()) {
+        final String finalSql = sql;
+
+        // Ensure the connection is configured read-only before executing either validation or
+        // result queries
+        List<Map<String, Object>> results =
+            jdbcTemplate.execute(
+                (Connection con) -> {
+                  boolean wasReadOnly = con.isReadOnly();
+                  try {
+                    con.setReadOnly(true);
+
+                    // Replace concatenated execute EXPLAIN dry-run with a safer queryForList-based
+                    // approach
+                    // We use prepareStatement to be safe, though EXPLAIN doesn't execute the query
+                    try (PreparedStatement explainPs =
+                            con.prepareStatement("EXPLAIN QUERY PLAN " + finalSql);
+                        ResultSet explainRs = explainPs.executeQuery()) {
+                      // dry-run successful
+                    }
+
+                    // Execute actual query
+                    try (PreparedStatement ps = con.prepareStatement(finalSql)) {
+                      ps.setMaxRows(100);
+                      try (ResultSet rs = ps.executeQuery()) {
+                        ColumnMapRowMapper rowMapper = new ColumnMapRowMapper();
+                        List<Map<String, Object>> list = new ArrayList<>();
+                        int rowNum = 0;
+                        while (rs.next() && rowNum < 100) {
+                          list.add(rowMapper.mapRow(rs, rowNum++));
+                        }
+                        return list;
+                      }
+                    }
+                  } finally {
+                    con.setReadOnly(wasReadOnly);
+                  }
+                });
+
+        if (results == null || results.isEmpty()) {
           return "The query executed successfully but returned no results.";
         }
 
@@ -99,14 +149,12 @@ public class TextToSqlGenerator {
   private String formatResults(List<Map<String, Object>> results) {
     StringBuilder sb = new StringBuilder();
     if (!results.isEmpty()) {
-      Map<String, Object> firstRow = results.get(0);
+      Map<String, Object> firstRow = results.getFirst();
       for (String key : firstRow.keySet()) {
         sb.append(key).append(" | ");
       }
       sb.append("\n");
-      for (int i = 0; i < firstRow.size(); i++) {
-        sb.append("--- | ");
-      }
+      sb.repeat("--- | ", firstRow.size());
       sb.append("\n");
 
       for (Map<String, Object> row : results) {
